Implemented snacks api